OPC/cerebroarchive/k8s/local/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cerebro-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cerebro-frontend
  template:
    metadata:
      labels:
        app: cerebro-frontend
    spec:
      containers:
      - name: cerebro-frontend
        image: cerebroarchive-frontend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: cerebro-frontend
